# code-gen

./: .gitignore  CMakeLists.txt  LANGUAGE.md  README.md
tinycc/: main.cpp
tinycc/backend/: instructions.hpp  target_translator.cpp  target_translator.h
tinycc/common/: colors.h  helpers.h  options.h  source_error.h  symbol.cpp  types.cpp  types.h
tinycc/frontend/: ast.cpp  ast.h  lexer.h  parser.cpp  parser.h  typechecker.h
tinycc/optimizer/: ast_to_il.h  il.cpp  il.h  il_interpreter.h  insns.h  optimizer.h
